# manager-ai-bot

./: .gitignore  README.md  bot.py  pyproject.toml
agent/: agent.py  confirm.py  prompts.py  tool_registry.py
core/: config.py  db.py  telegram_utils.py
domains/flashcards/: __init__.py  handlers.py  menus.py  storage.py  tools.py
domains/manga/: __init__.py  handlers.py  menus.py  storage.py  tools.py
domains/notion/: __init__.py  handlers.py  sync.py  tools.py
domains/scheduler/: __init__.py  cronjobs.py  jobs.py
domains/tasks/: __init__.py  handlers.py  menus.py  storage.py  tools.py
domains/vocabulary/: __init__.py  handlers.py  menus.py  srs_algorithm.py  storage.py  tools.py
